--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <TextView
         android:id="@+id/tv_title"
-        android:text="Tarefas"
+        android:text="@string/label_task"
         android:layout_margin="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,12 +18,30 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <include
+        android:id="@+id/include_empty"
+        layout="@layout/empty_state" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_tasks"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        android:layout_marginTop="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="8"
+        tools:listitem="@layout/item_tasks"
+       app:layout_constraintBottom_toTopOf="@id/fab"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:visibility="gone" />
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/fab"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    />
+        android:contentDescription="@string/label_new_tasks" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
